added erase button and change resolution button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="main" id="main">
+        <div class="left">
+            <button id="change">Change Resolution</button>
+            <button id="erase">Erase</button>
+        </div>
     </div>
 </body>
 </html>
